feat: add amount_per_minute in recipes

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,10 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "SECONDS = 60\n",
+    "\n",
     "DATA_PATH = Path(\"../data\")\n",
     "ORIGINAL_DATA = DATA_PATH.joinpath(\"original_data.json\")\n",
     "\n",
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +98,7 @@
        "dict_keys(['items', 'recipes', 'schematics', 'generators', 'resources', 'miners', 'buildings'])"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +125,7 @@
        "dict_keys(['slug', 'icon', 'name', 'description', 'sinkPoints', 'className', 'stackSize', 'energyValue', 'radioactiveDecay', 'liquid', 'fluidColor'])"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,10 +258,14 @@
     "    for ingredient in recipe[\"ingredients\"]:\n",
     "        ingredient_className = ingredient[\"item\"]\n",
     "        ingredient[\"item\"] = item_slug_by_className.get(ingredient_className)\n",
+    "        ingredient[\"amount_per_minute\"] = (\n",
+    "            ingredient[\"amount\"] * SECONDS / recipe[\"time\"]\n",
+    "        )\n",
     "\n",
     "    for product in recipe[\"products\"]:\n",
     "        product_className = product[\"item\"]\n",
     "        product[\"item\"] = item_slug_by_className.get(product_className)\n",
+    "        product[\"amount_per_minute\"] = product[\"amount\"] * SECONDS / recipe[\"time\"]\n",
     "\n",
     "    recipe[\"producedIn\"] = building_slug_by_className.get(recipe[\"producedIn\"][0])\n",
     "\n",
@@ -268,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -278,15 +284,19 @@
        " 'name': 'Iron Plate',\n",
        " 'alternate': False,\n",
        " 'time': 6.0,\n",
-       " 'ingredients': [{'item': 'iron-ingot', 'amount': 3.0}],\n",
-       " 'products': [{'item': 'iron-plate', 'amount': 2.0}],\n",
+       " 'ingredients': [{'item': 'iron-ingot',\n",
+       "   'amount': 3.0,\n",
+       "   'amount_per_minute': 30.0}],\n",
+       " 'products': [{'item': 'iron-plate',\n",
+       "   'amount': 2.0,\n",
+       "   'amount_per_minute': 20.0}],\n",
        " 'producedIn': 'constructor',\n",
        " 'isVariablePower': False,\n",
        " 'minPower': 0,\n",
        " 'maxPower': 1}"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
