--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -4307,7 +4307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4315,7 +4315,7 @@
     "    \"bauxite\": {\"name\": \"Bauxite\", \"amount\": 12300},\n",
     "    \"caterium-ore\": {\"name\": \"Caterium Ore\", \"amount\": 15000},\n",
     "    \"coal\": {\"name\": \"Coal\", \"amount\": 42300},\n",
-    "    \"copper\": {\"name\": \"Copper\", \"amount\": 36900},\n",
+    "    \"copper-ore\": {\"name\": \"Copper\", \"amount\": 36900},\n",
     "    \"crude-oil\": {\"name\": \"Crude Oil\", \"amount\": 12600},\n",
     "    \"iron-ore\": {\"name\": \"Iron Ore\", \"amount\": 92100},\n",
     "    \"limestone\": {\"name\": \"Limestone\", \"amount\": 69900},\n",
