feat: update rarity to be compared to iron

--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "dict_keys(['items', 'recipes', 'schematics', 'generators', 'resources', 'miners', 'buildings'])"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "  'power_consumption': 4}}"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -4162,7 +4162,7 @@
        "  'max_power': 1}}"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4180,7 +4180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4189,7 +4189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4208,7 +4208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -4228,7 +4228,7 @@
        "  'water_to_power_ratio': 0.0}]"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4255,7 +4255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4264,7 +4264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -4289,7 +4289,7 @@
        "  'water_to_power_ratio': 0.0}}"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4307,7 +4307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4327,15 +4327,16 @@
     "}\n",
     "total = sum([r[\"amount\"] for _, r in resources.items()])\n",
     "\n",
+    "iron_rarity = 3.579804560260586\n",
     "\n",
     "for _, resource in resources.items():\n",
     "    resource[\"percentage_of_total\"] = resource[\"amount\"] / total\n",
-    "    resource[\"rarity\"] = total / resource[\"amount\"]"
+    "    resource[\"rarity\"] = total / resource[\"amount\"] / iron_rarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -4344,54 +4345,54 @@
        "{'bauxite': {'name': 'Bauxite',\n",
        "  'amount': 12300,\n",
        "  'percentage_of_total': 0.0373066424021838,\n",
-       "  'rarity': 26.804878048780488},\n",
+       "  'rarity': 7.487804878048781},\n",
        " 'caterium-ore': {'name': 'Caterium Ore',\n",
        "  'amount': 15000,\n",
        "  'percentage_of_total': 0.04549590536851683,\n",
-       "  'rarity': 21.98},\n",
+       "  'rarity': 6.140000000000001},\n",
        " 'coal': {'name': 'Coal',\n",
        "  'amount': 42300,\n",
        "  'percentage_of_total': 0.12829845313921748,\n",
-       "  'rarity': 7.794326241134752},\n",
-       " 'copper': {'name': 'Copper',\n",
+       "  'rarity': 2.1773049645390072},\n",
+       " 'copper-ore': {'name': 'Copper',\n",
        "  'amount': 36900,\n",
        "  'percentage_of_total': 0.11191992720655142,\n",
-       "  'rarity': 8.934959349593496},\n",
+       "  'rarity': 2.4959349593495936},\n",
        " 'crude-oil': {'name': 'Crude Oil',\n",
        "  'amount': 12600,\n",
        "  'percentage_of_total': 0.03821656050955414,\n",
-       "  'rarity': 26.166666666666668},\n",
+       "  'rarity': 7.30952380952381},\n",
        " 'iron-ore': {'name': 'Iron Ore',\n",
        "  'amount': 92100,\n",
        "  'percentage_of_total': 0.27934485896269334,\n",
-       "  'rarity': 3.579804560260586},\n",
+       "  'rarity': 1.0},\n",
        " 'limestone': {'name': 'Limestone',\n",
        "  'amount': 69900,\n",
        "  'percentage_of_total': 0.21201091901728844,\n",
-       "  'rarity': 4.716738197424893},\n",
+       "  'rarity': 1.3175965665236051},\n",
        " 'nitrogen-gas': {'name': 'Nitrogen Gas',\n",
        "  'amount': 12000,\n",
        "  'percentage_of_total': 0.036396724294813464,\n",
-       "  'rarity': 27.475},\n",
+       "  'rarity': 7.675000000000001},\n",
        " 'raw-quartz': {'name': 'Raw Quartz',\n",
        "  'amount': 13500,\n",
        "  'percentage_of_total': 0.04094631483166515,\n",
-       "  'rarity': 24.42222222222222},\n",
+       "  'rarity': 6.822222222222222},\n",
        " 'sulfur': {'name': 'Sulfur',\n",
        "  'amount': 10800,\n",
        "  'percentage_of_total': 0.03275705186533212,\n",
-       "  'rarity': 30.52777777777778},\n",
+       "  'rarity': 8.527777777777779},\n",
        " 'uranium': {'name': 'Uranium',\n",
        "  'amount': 2100,\n",
        "  'percentage_of_total': 0.006369426751592357,\n",
-       "  'rarity': 157.0},\n",
+       "  'rarity': 43.85714285714286},\n",
        " 'sam': {'name': 'SAM',\n",
        "  'amount': 10200,\n",
        "  'percentage_of_total': 0.030937215650591446,\n",
-       "  'rarity': 32.3235294117647}}"
+       "  'rarity': 9.029411764705882}}"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4409,7 +4410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4437,7 +4438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4447,7 +4448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4457,7 +4458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4467,7 +4468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4477,13 +4478,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(RESOURCES_FILE, \"w\") as f:\n",
     "    json.dump(resources, f, indent=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
