--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "dict_keys(['items', 'recipes', 'schematics', 'generators', 'resources', 'miners', 'buildings'])"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "  'power_consumption': 4}}"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
     "\n",
     "\n",
     "for recipe in recipes:\n",
-    "    recipe[\"slug\"] = recipe[\"slug\"].rstrip(\"-c\")\n",
+    "    recipe[\"slug\"] = recipe[\"slug\"][:-2]\n",
     "\n",
     "    del recipe[\"inHand\"]\n",
     "    del recipe[\"forBuilding\"]\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
        "  'is_variable_power': False,\n",
        "  'min_power': 0,\n",
        "  'max_power': 1},\n",
-       " 'recipe-plasti': {'slug': 'recipe-plasti',\n",
+       " 'recipe-plastic': {'slug': 'recipe-plastic',\n",
        "  'name': 'Plastic',\n",
        "  'alternate': False,\n",
        "  'time': 6.0,\n",
@@ -1161,7 +1161,7 @@
        "  'is_variable_power': False,\n",
        "  'min_power': 0,\n",
        "  'max_power': 1},\n",
-       " 'recipe-residualplasti': {'slug': 'recipe-residualplasti',\n",
+       " 'recipe-residualplastic': {'slug': 'recipe-residualplastic',\n",
        "  'name': 'Residual Plastic',\n",
        "  'alternate': False,\n",
        "  'time': 6.0,\n",
@@ -3010,7 +3010,7 @@
        "  'is_variable_power': False,\n",
        "  'min_power': 0,\n",
        "  'max_power': 1},\n",
-       " 'recipe-alternate-ailimiter-plasti': {'slug': 'recipe-alternate-ailimiter-plasti',\n",
+       " 'recipe-alternate-ailimiter-plastic': {'slug': 'recipe-alternate-ailimiter-plastic',\n",
        "  'name': 'Alternate: Plastic AI Limiter',\n",
        "  'alternate': True,\n",
        "  'time': 15.0,\n",
@@ -3086,7 +3086,7 @@
        "  'is_variable_power': False,\n",
        "  'min_power': 0,\n",
        "  'max_power': 1},\n",
-       " 'recipe-alternate-ironingot-basi': {'slug': 'recipe-alternate-ironingot-basi',\n",
+       " 'recipe-alternate-ironingot-basic': {'slug': 'recipe-alternate-ironingot-basic',\n",
        "  'name': 'Alternate: Basic Iron Ingot',\n",
        "  'alternate': True,\n",
        "  'time': 12.0,\n",
@@ -3899,7 +3899,7 @@
        "  'is_variable_power': False,\n",
        "  'min_power': 0,\n",
        "  'max_power': 1},\n",
-       " 'recipe-alternate-polyesterfabri': {'slug': 'recipe-alternate-polyesterfabri',\n",
+       " 'recipe-alternate-polyesterfabric': {'slug': 'recipe-alternate-polyesterfabric',\n",
        "  'name': 'Alternate: Polyester Fabric',\n",
        "  'alternate': True,\n",
        "  'time': 2.0,\n",
@@ -4162,7 +4162,7 @@
        "  'max_power': 1}}"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4180,7 +4180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4189,13 +4189,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slugify_generator_name(classname: str) -> str:\n",
     "    classname = classname.lstrip(\"Desc_\")\n",
-    "    classname = classname.rstrip(\"_C\")\n",
+    "    classname = classname[:-2]\n",
     "    new_classname = \"\"\n",
     "    for c in classname:\n",
     "        if c.isupper():\n",
@@ -4208,7 +4208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -4228,7 +4228,7 @@
        "  'water_to_power_ratio': 0.0}]"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4255,7 +4255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4264,7 +4264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -4289,7 +4289,7 @@
        "  'water_to_power_ratio': 0.0}}"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4307,7 +4307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4336,7 +4336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -4392,13 +4392,27 @@
        "  'rarity': 9.029411764705882}}"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "resources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resources[\"water\"] = {\n",
+    "    \"name\": \"water\",\n",
+    "    \"amount\": 0,\n",
+    "    \"percentage_of_total\": 0,\n",
+    "    \"rarity\": 0,\n",
+    "}"
    ]
   },
   {
@@ -4410,7 +4424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4438,7 +4452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4448,7 +4462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4458,7 +4472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4468,7 +4482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4478,7 +4492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
