add first comparisons

--- a/notebooks/03_comparison_recipes.ipynb
+++ b/notebooks/03_comparison_recipes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,106 +49,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_recipes_for_product_with_no_byproducts(item: str) -> list:\n",
+    "    return {\n",
+    "        slug: recipe\n",
+    "        for slug, recipe in recipes.items()\n",
+    "        if len(recipe[\"products\"]) == 1 and recipe[\"products\"][0][\"item\"] == item\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_recipes(item: str) -> list[tuple[int, str]]:\n",
+    "    recipe_for_item = find_recipes_for_product_with_no_byproducts(item)\n",
+    "\n",
+    "    recipe_evalution = []\n",
+    "    for key, recipe in recipe_for_item.items():\n",
+    "        total_cost = 0\n",
+    "        product_amount = recipe[\"products\"][0][\"amount\"]\n",
+    "        for ingredient in recipe[\"ingredients\"]:\n",
+    "            item_name = ingredient[\"item\"]\n",
+    "            if cost_list.get(item_name) is None:\n",
+    "                ic(item_name)\n",
+    "                raise NotImplementedError()\n",
+    "            total_cost += round(\n",
+    "                ingredient[\"amount\"] * cost_list[item_name][1] / product_amount, 4\n",
+    "            )\n",
+    "        recipe_evalution.append([key, total_cost])\n",
+    "    recipe_evalution.sort(key=lambda x: x[1])\n",
+    "    return recipe_evalution\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_recipes_for_ore(ore: str) -> list[tuple[int, str]]:\n",
+    "    ore_recipes = evaluate_recipes(ore)\n",
+    "    ore_recipes.append([\"extractor\", resources[ore][\"rarity\"]])\n",
+    "    ore_recipes.sort(key=lambda x: x[1])\n",
+    "    return ore_recipes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_list = {\n",
+    "    key: [\"extractor\", resource[\"rarity\"]] for key, resource in resources.items()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cost_list[\"sulfuric-acid\"] = [\"sulfuric_acid\", resources[\"sulfur\"][\"rarity\"]]\n",
+    "# ? sam to reanimated sam is 4:1\n",
+    "cost_list[\"reanimated-sam\"] = [\"reanimated-sam\", resources[\"sam\"][\"rarity\"] * 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['recipe-alternate-pureironingot', 0.5385],\n",
+       " ['recipe-alternate-ingotiron', 0.8666],\n",
+       " ['recipe-ingotiron', 1.0],\n",
+       " ['recipe-alternate-ironingot-leached', 1.353],\n",
+       " ['recipe-alternate-ironingot-basic', 1.556]]"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iron_ingot = \"iron-ingot\"\n",
+    "iron_ingot_recipes = evaluate_recipes(\"iron-ingot\")\n",
+    "cost_list[iron_ingot] = iron_ingot_recipes[0]\n",
+    "iron_ingot_recipes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ore = \"copper-ore\"\n",
+    "ore_recipes = evaluate_recipes_for_ore(ore)\n",
+    "cost_list[ore] = ore_recipes[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ore = \"bauxite\"\n",
+    "ore_recipes = evaluate_recipes_for_ore(ore)\n",
+    "cost_list[ore] = ore_recipes[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ore = \"caterium-ore\"\n",
+    "ore_recipes = evaluate_recipes_for_ore(ore)\n",
+    "cost_list[ore] = ore_recipes[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ic| slug: 'recipe-unpackagewater'\n",
-      "ic| item_name: 'packaged-water'\n",
-      "ic| slug: 'recipe-packagedwater'\n",
-      "ic| item_name: 'water'\n",
-      "ic| item_name: 'empty-canister'\n",
-      "ic| slug: 'recipe-unpackageturbofuel'\n",
-      "ic| item_name: 'packaged-turbofuel'\n",
-      "ic| slug: 'recipe-packagedturbofuel'\n",
-      "ic| item_name: 'turbofuel'\n",
-      "ic| slug: 'recipe-alternate-turbofuel'\n",
-      "ic| item_name: 'fuel'\n",
-      "ic| slug: 'recipe-liquidfuel'\n",
-      "ic| item_name: 'crude-oil'\n"
+      "ic| ore_recipes: [['extractor', 6.82],\n",
+      "                  ['recipe-quartz-coal', 7.37],\n",
+      "                  ['recipe-quartz-bauxite', 8.6433]]\n"
      ]
     }
    ],
    "source": [
-    "def find_cycle(item: str, visisted_recipes=[]):\n",
-    "    selected_recipes = find_recipes_with_product(item)\n",
-    "\n",
-    "    for slug, recipe in selected_recipes.items():\n",
-    "        ic(slug)\n",
-    "        if slug in visisted_recipes:\n",
-    "            ic(\"cycle found\", visisted_recipes)\n",
-    "            ic(recipes[visisted_recipes[0]])\n",
-    "            return visisted_recipes\n",
-    "\n",
-    "        visisted_recipes.append(slug)\n",
-    "\n",
-    "        for ingredient in recipe[\"ingredients\"]:\n",
-    "            item_name = ingredient[\"item\"]\n",
-    "            ic(item_name)\n",
-    "            if item_name in list(resources.keys()):\n",
-    "                continue\n",
-    "            return find_cycle(item_name, visisted_recipes)\n",
-    "        break\n",
-    "\n",
-    "\n",
-    "find_cycle(\"water\")"
+    "ore = \"raw-quartz\"\n",
+    "ore_recipes = evaluate_recipes_for_ore(ore)\n",
+    "ic(ore_recipes)\n",
+    "cost_list[ore] = ore_recipes[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| ore_recipes: [['extractor', 2.18],\n",
+      "                  ['recipe-coal-iron', 4.51],\n",
+      "                  ['recipe-coal-limestone', 6.97]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ore = \"coal\"\n",
+    "ore_recipes = evaluate_recipes_for_ore(ore)\n",
+    "ic(ore_recipes)\n",
+    "cost_list[ore] = ore_recipes[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('recipe-alternate-silica-distilled', 0.2944726151998446)"
+       "{'bauxite': ['recipe-bauxite-copper', 6.76],\n",
+       " 'caterium-ore': ['recipe-caterium-copper', 6.135],\n",
+       " 'coal': ['extractor', 2.18],\n",
+       " 'copper-ore': ['extractor', 2.5],\n",
+       " 'crude-oil': ['extractor', 7.31],\n",
+       " 'iron-ore': ['extractor', 1.0],\n",
+       " 'limestone': ['extractor', 1.32],\n",
+       " 'nitrogen-gas': ['extractor', 7.68],\n",
+       " 'raw-quartz': ['extractor', 6.82],\n",
+       " 'sulfur': ['extractor', 8.53],\n",
+       " 'uranium': ['extractor', 43.86],\n",
+       " 'sam': ['extractor', 9.03],\n",
+       " 'water': ['extractor', 0],\n",
+       " 'sulfuric-acid': ['sulfuric_acid', 8.53],\n",
+       " 'reanimated-sam': ['reanimated-sam', 36.12],\n",
+       " 'iron-ingot': ['recipe-alternate-pureironingot', 0.5385]}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def get_cost(item: str, visited=[]) -> float:\n",
-    "    selected_recipes = find_recipes_with_product(item)\n",
-    "\n",
-    "    cost_of_recipes = []\n",
-    "    for slug, recipe in selected_recipes.items():\n",
-    "        if slug in visited:\n",
-    "            return None, -1\n",
-    "\n",
-    "        visited.append(slug)\n",
-    "\n",
-    "        recipe_cost = 0\n",
-    "        for ingredient in recipe[\"ingredients\"]:\n",
-    "            item_name = ingredient[\"item\"]\n",
-    "\n",
-    "            if item_name in list(resources.keys()):\n",
-    "                cost = ingredient[\"amount_per_minute\"] * resources[item_name][\"rarity\"]\n",
-    "                recipe_cost += cost\n",
-    "            else:\n",
-    "                _, child_cost = get_cost(item_name, visited)\n",
-    "                recipe_cost += child_cost\n",
-    "\n",
-    "        output_per_minute = [p for p in recipe[\"products\"] if p[\"item\"] == item][0][\n",
-    "            \"amount_per_minute\"\n",
-    "        ]\n",
-    "        cost_of_recipes.append((slug, recipe_cost / output_per_minute))\n",
-    "\n",
-    "    cost_of_recipes = [(slug, cost) for slug, cost in cost_of_recipes if cost >= 0]\n",
-    "    cost_of_recipes.sort(key=lambda r: r[1])\n",
-    "\n",
-    "    if cost_of_recipes:\n",
-    "        return cost_of_recipes[0]\n",
-    "    return [], -1\n",
-    "\n",
-    "\n",
-    "get_cost(\"silica\")"
+    "cost_list"
    ]
   },
   {
