--- a/notebooks/01_data_cleaning.ipynb
+++ b/notebooks/01_data_cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "dict_keys(['items', 'recipes', 'schematics', 'generators', 'resources', 'miners', 'buildings'])"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "  'power_consumption': 4}}"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -4162,7 +4162,7 @@
        "  'max_power': 1}}"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4180,7 +4180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4189,7 +4189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4208,7 +4208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -4228,7 +4228,7 @@
        "  'water_to_power_ratio': 0.0}]"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4255,7 +4255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4264,7 +4264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -4289,7 +4289,7 @@
        "  'water_to_power_ratio': 0.0}}"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4307,7 +4307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4330,13 +4330,13 @@
     "iron_rarity = 3.579804560260586\n",
     "\n",
     "for _, resource in resources.items():\n",
-    "    resource[\"percentage_of_total\"] = resource[\"amount\"] / total\n",
-    "    resource[\"rarity\"] = total / resource[\"amount\"] / iron_rarity"
+    "    resource[\"percentage_of_total\"] = round(resource[\"amount\"] / total, 2)\n",
+    "    resource[\"rarity\"] = round(total / resource[\"amount\"] / iron_rarity, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -4344,55 +4344,55 @@
       "text/plain": [
        "{'bauxite': {'name': 'Bauxite',\n",
        "  'amount': 12300,\n",
-       "  'percentage_of_total': 0.0373066424021838,\n",
-       "  'rarity': 7.487804878048781},\n",
+       "  'percentage_of_total': 0.04,\n",
+       "  'rarity': 7.49},\n",
        " 'caterium-ore': {'name': 'Caterium Ore',\n",
        "  'amount': 15000,\n",
-       "  'percentage_of_total': 0.04549590536851683,\n",
-       "  'rarity': 6.140000000000001},\n",
+       "  'percentage_of_total': 0.05,\n",
+       "  'rarity': 6.14},\n",
        " 'coal': {'name': 'Coal',\n",
        "  'amount': 42300,\n",
-       "  'percentage_of_total': 0.12829845313921748,\n",
-       "  'rarity': 2.1773049645390072},\n",
+       "  'percentage_of_total': 0.13,\n",
+       "  'rarity': 2.18},\n",
        " 'copper-ore': {'name': 'Copper',\n",
        "  'amount': 36900,\n",
-       "  'percentage_of_total': 0.11191992720655142,\n",
-       "  'rarity': 2.4959349593495936},\n",
+       "  'percentage_of_total': 0.11,\n",
+       "  'rarity': 2.5},\n",
        " 'crude-oil': {'name': 'Crude Oil',\n",
        "  'amount': 12600,\n",
-       "  'percentage_of_total': 0.03821656050955414,\n",
-       "  'rarity': 7.30952380952381},\n",
+       "  'percentage_of_total': 0.04,\n",
+       "  'rarity': 7.31},\n",
        " 'iron-ore': {'name': 'Iron Ore',\n",
        "  'amount': 92100,\n",
-       "  'percentage_of_total': 0.27934485896269334,\n",
+       "  'percentage_of_total': 0.28,\n",
        "  'rarity': 1.0},\n",
        " 'limestone': {'name': 'Limestone',\n",
        "  'amount': 69900,\n",
-       "  'percentage_of_total': 0.21201091901728844,\n",
-       "  'rarity': 1.3175965665236051},\n",
+       "  'percentage_of_total': 0.21,\n",
+       "  'rarity': 1.32},\n",
        " 'nitrogen-gas': {'name': 'Nitrogen Gas',\n",
        "  'amount': 12000,\n",
-       "  'percentage_of_total': 0.036396724294813464,\n",
-       "  'rarity': 7.675000000000001},\n",
+       "  'percentage_of_total': 0.04,\n",
+       "  'rarity': 7.68},\n",
        " 'raw-quartz': {'name': 'Raw Quartz',\n",
        "  'amount': 13500,\n",
-       "  'percentage_of_total': 0.04094631483166515,\n",
-       "  'rarity': 6.822222222222222},\n",
+       "  'percentage_of_total': 0.04,\n",
+       "  'rarity': 6.82},\n",
        " 'sulfur': {'name': 'Sulfur',\n",
        "  'amount': 10800,\n",
-       "  'percentage_of_total': 0.03275705186533212,\n",
-       "  'rarity': 8.527777777777779},\n",
+       "  'percentage_of_total': 0.03,\n",
+       "  'rarity': 8.53},\n",
        " 'uranium': {'name': 'Uranium',\n",
        "  'amount': 2100,\n",
-       "  'percentage_of_total': 0.006369426751592357,\n",
-       "  'rarity': 43.85714285714286},\n",
+       "  'percentage_of_total': 0.01,\n",
+       "  'rarity': 43.86},\n",
        " 'sam': {'name': 'SAM',\n",
        "  'amount': 10200,\n",
-       "  'percentage_of_total': 0.030937215650591446,\n",
-       "  'rarity': 9.029411764705882}}"
+       "  'percentage_of_total': 0.03,\n",
+       "  'rarity': 9.03}}"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4403,7 +4403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4424,7 +4424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4452,7 +4452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4462,7 +4462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4472,7 +4472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4482,7 +4482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4492,13 +4492,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(RESOURCES_FILE, \"w\") as f:\n",
     "    json.dump(resources, f, indent=4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
